# py-plugin

./: .gitignore  README.md  config.json  config_default.json  config_default.yaml  index.js  main.py  package.json  pyproject.toml  requirements.txt
apps/download/: info.json
apps/js/: example_StreamToStream.js  example_StreamToUnary.js  example_UnaryToStream.js  example_UnaryToUnary.js  petpet.js
apps/py/: example_StreamToStream.py  example_StreamToUnary.py  example_UnaryToStream.py  example_UnaryToUnary.py
core/: __init__.py
core/client/: client.js
core/lib/: async_map.py  async_queue.py  config.py  decorator.py  event.py  exception.py  logger.py  parser.py  redis.py  transform.py  type.py
core/queue/: __init__.py
core/rpc/: hola.proto  hola_pb2.py  hola_pb2.pyi  hola_pb2_grpc.py  type.proto  type_pb2.py  type_pb2_grpc.py
core/server/: server.py
core/typing/: __init__.py
core/util/: render.js  transform.js
core/utils/: channel.js  receiver.js
install/: __main__.py  poetry.py  requirements.py
install-poetry/: __main__.py  poetry.py
nonebot/: __init__.py  config.py  consts.py  drivers.py  exception.py  log.py  matcher.py  message.py  params.py  permission.py  rule.py  typing.py  utils.py
nonebot/adapters/: __init__.py
nonebot/dependencies/: __init__.py  utils.py
nonebot/internal/: matcher.py
nonebot/plugin/: __init__.py  load.py  manager.py  on.py
plugins/: readme.txt
resources/layout/: common.css  default.html
utils/: channel.js  client.js  receiver.js
yunzai_nonebot/: __init__.py
yunzai_nonebot/hijack/: __init__.py  adapter.py  bot.py  driver.py  event.py  logger.py  message.py  params.py  plugin.py
yunzai_nonebot/rpc/: hola.proto  hola_pb2.py  hola_pb2.pyi  typing.py  (+1 more)
(+61 files in other folders)
