[tool.poetry]
name = "py-plugin"
version = "3.0.0"
description = ""
authors = ["realhuhu <2661467107@qq.com>"]
readme = "README.md"
packages = [{include = "py_plugin"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
aiohttp = "^3.8.3"
nonebot-plugin-imageutils = "^0.1.13.3"
grpcio = "^1.50.0"
googleapis-common-protos = "^1.57.0"
imageio = "^2.22.4"
omegaconf = "^2.2.3"
nonebot-plugin-apscheduler = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
