[tool.poetry]
name = "py-plugin"
version = "3.1.0"
description = ""
authors = ["realhuhu <2661467107@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc3"
nonebot-adapter-onebot = "^2.2.2"
omegaconf = "^2.3.0"
googleapis-common-protos = "^1.59.0"
grpcio = "^1.51.3"


[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.51.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true